Bug 470390 - Other splits forgotten if I quit in "Hide Inactive Views" mode
Summary: Other splits forgotten if I quit in "Hide Inactive Views" mode
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: sessions (other bugs)
Version First Reported In: Git
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-05-29 03:53 UTC by Grósz Dániel
Modified: 2024-09-25 17:36 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Grósz Dániel 2023-05-29 03:53:51 UTC
SUMMARY
If you use saved sessions and split views, and quit Kate while the "Hide Inactive Views" mode is active, and then reopen Kate, the other split views are forgotten, as if they had been closed completely, rather than just hidden.

The list of open files is preserved though, so files that were only open in a hidden split view remain available in the Documents plugin and in the Ctrl+Tab switcher

Additionally, if there was only one tab in the visible view (and thus after reopening Kate), then the katepart menu and toolbar items are not loaded when reopening Kate.

STEPS TO REPRODUCE
1. Open a saved session.
2. Click Split Vertical (if you don't have split views already).
3. Click Hide Inactive Views. Optionally, open some documents in each view.
4. Quit Kate.
5. Open Kate again with the same session.

OBSERVED RESULT
The Hide Inactive Views action is inactive and disabled, as when there is only one view. The Split Vertical and Split Horizontal actions are enabled.

If, at this point, there is only one visible tab, actions provided by katepart are missing from the menus and the toolbar, albeit the file is visible and can be edited.

EXPECTED RESULT
The Hide Inactive Views action is enabled and active. The Split actions are disabled, as when Hide Inactive Views is enabled. Clicking Hide Inactive Views inactivates it, and the other split view(s) are there again. The katepart actions are available.

Even if saving the Hide Inactive Views state in sessions isn't implemented, I'd expect all split views to be remembered, rather than just the one that was visible before quitting.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20230527
KDE Plasma Version: 5.27.5
KDE Frameworks Version: 5.106.0
Qt Version: 5.15.9
Kernel Version: 6.3.1-2-default (64-bit)
Graphics Platform: X11
Comment 1 Christoph Cullmann 2024-09-25 17:36:42 UTC
Git commit 44dfc20cae9631b2bd8fc15845a1474393ce7ef5 by Christoph Cullmann.
Committed on 25/09/2024 at 17:36.
Pushed by cullmann into branch 'master'.

always save all splitters

we don't remember if stuff was hidden, but at least
we don't loose all split views

M  +1    -7    apps/lib/kateviewmanager.cpp

https://invent.kde.org/utilities/kate/-/commit/44dfc20cae9631b2bd8fc15845a1474393ce7ef5