always save all splitters

we don't remember if stuff was hidden, but at least
we don't loose all split views

BUG: 470390